leadcard linx alignment fixed

--- a/src/app/view/lead-list/lead-layout/lead-card-content/lead-card-content.component.css
+++ b/src/app/view/lead-list/lead-layout/lead-card-content/lead-card-content.component.css
@@ -124,7 +124,7 @@
     font-weight: bold;
 }
 .pd-c{
-    padding:0.5rem 2rem !important;
+    padding:0.5rem 1rem !important;
 }
 .pd-c3{
     padding-left: 1.3rem !important;
